# wasm-component-example

./: README.md
.devcontainer/: devcontainer.json
awesomeapp/: Cargo.toml
awesomeapp/src/: main.rs
case0/: Cargo.toml
case0/src/: lib.rs
case0/wit/: world.wit
case1/: Cargo.toml
case1/src/: lib.rs
case1/wit/: world.wit
comp1/: Cargo.toml
comp1/src/: lib.rs
comp1/wit/: world.wit
comp2/: Cargo.toml
comp2/src/: lib.rs
comp2/wit/: world.wit
